--- a/index.html
+++ b/index.html
@@ -70,10 +70,7 @@
                 <img src="img/producto1.jpg" alt="Imagen producto" />
                 <div class="texto-producto">
                     <h3>Producto 1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quaerat 
-                        amet, autem, eligendi sequi id blanditiis vitae dolore quia repudiandae 
-                        fuga libero esse quisquam temporibus consectetur? Molestiae, quod? Ipsum, 
-                        repellat.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. .</p>
                     <p class="precio">$100.000</p>
                     <a href="#" class="btn">Agregar al carrito</a>
                 </div>
