--- a/blog.html
+++ b/blog.html
@@ -37,46 +37,50 @@
                     <div class="imagen">
                         <img src="img/nosotros.jpg" alt="imagen nosotros">
                     </div>
-                    <div class="entrada-meta">
-                        <p>Fecha: <span>27 de Julio 2022</span> </p>
-                        <p>Escrito por: <span>Tienda Muebles</span></p>
+                    <div class="contenido-blog">
+                        <div class="entrada-meta">
+                            <p>Fecha: <span>27 de Julio 2022</span> </p>
+                            <p>Escrito por: <span>Tienda Muebles</span></p>
+                        </div>
+                        <div class="entrada-blog">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing 
+                                elit. Voluptas ratione id, quisquam amet labore ea 
+                                ipsum modi voluptatum nostrum esse nobis dignissimos 
+                                dicta. Reiciendis laboriosam quo, delectus earum 
+                                commodi quisquam?</p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
+                                elit. Dolorem vitae eveniet explicabo numquam 
+                                inventore et ipsa cum! Laboriosam, qui? Unde 
+                                voluptate recusandae odit ipsa amet a neque 
+                                consequuntur voluptatum pariatur!</p>
+                        </div>
+                        <a href="entrada.html"class="btn max-width-30 ">Leer</a>
                     </div>
-                    <div class="entrada-blog">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing 
-                            elit. Voluptas ratione id, quisquam amet labore ea 
-                            ipsum modi voluptatum nostrum esse nobis dignissimos 
-                            dicta. Reiciendis laboriosam quo, delectus earum 
-                            commodi quisquam?</p>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                            elit. Dolorem vitae eveniet explicabo numquam 
-                            inventore et ipsa cum! Laboriosam, qui? Unde 
-                            voluptate recusandae odit ipsa amet a neque 
-                            consequuntur voluptatum pariatur!</p>
-                    </div>
-                    <a href="entrada.html"class="btn max-width-30 ">Leer</a>
                 </article>
                 <article class="entrada">
                     <h2>Guía de Colores</h2>
                     <div class="imagen">
                         <img src="img/nosotros.jpg" alt="imagen nosotros">
                     </div>
-                    <div class="entrada-meta">
-                        <p>Fecha: <span>27 de Julio 2022</span> </p>
-                        <p>Escrito por: <span>Tienda Muebles</span></p>
+                    <div class="contenido-blog">
+                        <div class="entrada-meta">
+                            <p>Fecha: <span>27 de Julio 2022</span> </p>
+                            <p>Escrito por: <span>Tienda Muebles</span></p>
+                        </div>
+                        <div class="entrada-blog">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing 
+                                elit. Voluptas ratione id, quisquam amet labore ea 
+                                ipsum modi voluptatum nostrum esse nobis dignissimos 
+                                dicta. Reiciendis laboriosam quo, delectus earum 
+                                commodi quisquam?</p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
+                                elit. Dolorem vitae eveniet explicabo numquam 
+                                inventore et ipsa cum! Laboriosam, qui? Unde 
+                                voluptate recusandae odit ipsa amet a neque 
+                                consequuntur voluptatum pariatur!</p>
+                        </div>
+                        <a href="entrada.html"class="btn max-width-30 ">Leer</a>
                     </div>
-                    <div class="entrada-blog">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing 
-                            elit. Voluptas ratione id, quisquam amet labore ea 
-                            ipsum modi voluptatum nostrum esse nobis dignissimos 
-                            dicta. Reiciendis laboriosam quo, delectus earum 
-                            commodi quisquam?</p>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                            elit. Dolorem vitae eveniet explicabo numquam 
-                            inventore et ipsa cum! Laboriosam, qui? Unde 
-                            voluptate recusandae odit ipsa amet a neque 
-                            consequuntur voluptatum pariatur!</p>
-                    </div>
-                    <a href="entrada.html"class="btn max-width-30 ">Leer</a>
                 </article>
             </div>
 
